--- a/server/views/pages/main-pages.ejs
+++ b/server/views/pages/main-pages.ejs
@@ -64,5 +64,7 @@
 
     <!-- MAIN JS -->
     <script src="../javascripts/home-books.js"></script>
+    <script src="../javascripts/searchBar.js" async defer></script>
+
   </body>
 </html>
