--- a/server/views/pages/myaccount.ejs
+++ b/server/views/pages/myaccount.ejs
@@ -36,7 +36,7 @@
             </table>
             <form action="/api/user/remove-from-favorites" method="POST">
                 <input type="hidden" name="bookISBN" value="<%= user.favorites[i].bookISBN %>">
-                <button type="submit" class="">Remove From Favorites</button>
+                <button type="submit" class="button">Remove From Favorites</button>
             </form>
       </div>
       <% } %> 
