--- a/server/views/auth/resetpassword.ejs
+++ b/server/views/auth/resetpassword.ejs
@@ -1,7 +1,8 @@
 <%- include('../partials/header-pages'); -%>
 <%- include('../partials/nav-pages'); -%>
-  <main>
-    <%- include('../partials/messages');%>
+<%- include('../partials/messages');%>
+
+<main>
     <div class="login-container">
       
 
@@ -28,7 +29,7 @@
       </div>
       
       <div class="login-right">
-        <img src="../images/pasta.jpg" alt="">
+        <img src="../images/auth_cover.jpeg" alt="">
       </div>
           
     </div>
