--- a/server/views/pages/faq-pages.ejs
+++ b/server/views/pages/faq-pages.ejs
@@ -4,7 +4,8 @@
 
 <div class="main">
   <body>
-    <h1>Frequently Asked Questions</h1>
+    <hr>
+    <h1 style="margin-left: 30px;">Frequently Asked Questions</h1>
     <div class="faq-container">
       <div class="faq active">
         <h3 class="faq-title">
