--- a/server/views/pages/main-pages.ejs
+++ b/server/views/pages/main-pages.ejs
@@ -57,12 +57,306 @@
       </section>
       <!-- HOME END -->
 
+      <!-- DISCOUNT START -->
+      <section class="discount section" id="discount">
+        <div class="discount__container container grid">
+          <div class="discount__data">
+            <h2 class="discount__title section__title">Up To 50% Discount</h2>
+            <p class="discount__description">
+              Take advantage of the discount days we have for you, buy books
+              from your favorite writers, the more you buy, the more discounts
+              we have for you
+            </p>
+            <a href="#" class="button">Shop Now</a>
+          </div>
+          <div class="discount__images">
+            <img
+              src="../images/discount-book-1.png"
+              alt="image"
+              class="discount__img-1"
+            />
+            <img
+              src="../images/discount-book-2.png"
+              alt="image"
+              class="discount__img-2"
+            />
+          </div>
+        </div>
+      </section>
+      <!-- DISCOUNT END -->
+
+      <!-- NEW BOOKS START -->
+      <section class="new section" id="new">
+        <h2 class="section__title">New Books</h2>
+
+        <div class="new__container container">
+          <div class="new__swiper swiper">
+            <div class="swiper-wrapper">
+              <a href="#" class="new__card swiper-slide">
+                <img src="../images/book-1.png" alt="image" class="new__img" />
+
+
+                <div>
+                  <h2 class="new__title">New Book</h2>
+                  <div class="new__prices">
+                    <span class="new__discount">$7.99</span>
+                    <span class="new__price">$14.99</span>
+                  </div>
+    
+                </div>
+              </a>
+              <a href="#" class="new__card swiper-slide">
+                <img src="../images/book-2.png" alt="image" class="new__img" />
+
+                <div>
+                  <h2 class="new__title">New Book</h2>
+                  <div class="new__prices">
+                    <span class="new__discount">$7.99</span>
+                    <span class="new__price">$14.99</span>
+                  </div>
+
+                </div>
+              </a>
+              <a href="#" class="new__card swiper-slide">
+                <img src="../images/book-3.png" alt="image" class="new__img" />
+
+                <div>
+                  <h2 class="new__title">New Book</h2>
+                  <div class="new__prices">
+                    <span class="new__discount">$7.99</span>
+                    <span class="new__price">$14.99</span>
+                  </div>
+    
+                </div>
+              </a>
+              
+              <a href="#" class="new__card swiper-slide">
+                <img src="../images/book-8.png" alt="image" class="new__img" />
+
+                <div>
+                  <h2 class="new__title">New Book</h2>
+                  <div class="new__prices">
+                    <span class="new__discount">$7.99</span>
+                    <span class="new__price">$14.99</span>
+                  </div>
+
+                </div>
+              </a>
+              <a href="#" class="new__card swiper-slide">
+                <img src="../images/book-9.png" alt="image" class="new__img" />
+
+                <div>
+                  <h2 class="new__title">New Book</h2>
+                  <div class="new__prices">
+                    <span class="new__discount">$7.99</span>
+                    <span class="new__price">$14.99</span>
+                  </div>
+
+                </div>
+              </a>
+              <a href="#" class="new__card swiper-slide">
+                <img
+                  src="../images/book-10.png"
+                  alt="image"
+                  class="new__img"
+                />
+
+                <div>
+                  <h2 class="new__title">New Book</h2>
+                  <div class="new__prices">
+                    <span class="new__discount">$7.99</span>
+                    <span class="new__price">$14.99</span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="new__swiper swiper">
+            <div class="swiper-wrapper">
+              <a href="#" class="new__card swiper-slide">
+                <img
+                  src="../images/book-10.png"
+                  alt="image"
+                  class="new__img"
+                />
+
+                <div>
+                  <h2 class="new__title">New Book</h2>
+                  <div class="new__prices">
+                    <span class="new__discount">$7.99</span>
+                    <span class="new__price">$14.99</span>
+                  </div>
+         
+                </div>
+              </a>
+              <a href="#" class="new__card swiper-slide">
+                <img src="../images/book-9.png" alt="image" class="new__img" />
+
+                <div>
+                  <h2 class="new__title">New Book</h2>
+                  <div class="new__prices">
+                    <span class="new__discount">$7.99</span>
+                    <span class="new__price">$14.99</span>
+                  </div>
+        
+                </div>
+              </a>
+              <a href="#" class="new__card swiper-slide">
+                <img src="../images/book-8.png" alt="image" class="new__img" />
+            
+                <div>
+                  <h2 class="new__title">New Book</h2>
+                  <div class="new__prices">
+                    <span class="new__discount">$7.99</span>
+                    <span class="new__price">$14.99</span>
+                  </div>
+   
+                </div>
+              </a>
+
+
+
+              <a href="#" class="new__card swiper-slide">
+                <img src="../images/book-3.png" alt="image" class="new__img" />
+                <div>
+                  <h2 class="new__title">New Book</h2>
+                  <div class="new__prices">
+                    <span class="new__discount">$7.99</span>
+                    <span class="new__price">$14.99</span>
+                  </div>
+          
+                </div>
+              </a>
+              <a href="#" class="new__card swiper-slide">
+                <img src="../images/book-2.png" alt="image" class="new__img" />
+                <div>
+                  <h2 class="new__title">New Book</h2>
+                  <div class="new__prices">
+                    <span class="new__discount">$7.99</span>
+                    <span class="new__price">$14.99</span>
+                  </div>
+               
+                </div>
+              </a>
+              <a href="#" class="new__card swiper-slide">
+                <img src="../images/book-1.png" alt="image" class="new__img" />
+                <div>
+                  <h2 class="new__title">New Book</h2>
+                  <div class="new__prices">
+                    <span class="new__discount">$7.99</span>
+                    <span class="new__price">$14.99</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- NEW BOOKS END -->
+
+      <!--Review section-->
+
+      <section class="review">
+        <hr>
+        <h1 class="review-heading">Customer's Review</h1>
+        <div class="swiper review-slider">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide box">
+                    <img src="../images/pic-1.jpg">
+                    <p>Amazing Collection!!</p>
+                    <h3>John Deo</h3>
+                    <div class="stars">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half"></i>
+                    </div>
+                </div>
+
+                <div class="swiper-slide box">
+                    <img src="../images/pic-2.jpg">
+                    <p>True Gem!</p>
+                    <h3>Kyan Mays</h3>
+                    <div class="stars">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                </div>
+                <div class="swiper-slide box">
+                    <img src="../images/pic-3.jpg">
+                    <p>Recommending this website to everyone</p>
+                    <h3>Donald Mcguire</h3>
+                    <div class="stars">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half"></i>
+                    </div>
+                </div>
+
+                <div class="swiper-slide box">
+                    <img src="../images/pic-4.jpg">
+                    <p>Good Place for Book Lover</p>
+                    <h3>Kayla Hopper</h3>
+                    <div class="stars">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half"></i>
+                    </div>
+                </div>  
+            </div>
+        </div>
+    </section>
+
+    <!-- JOIN START -->
+    <section class="join section">
+      <div class="join__container">
+        <img src="../images/join-bg.jpg" alt="image" class="join__bg" />
+
+        <div class="join__data container grid">
+          <h2 class="join__title section__title">
+            Subscribe To Receive <br />
+            The Latest Updates
+          </h2>
+
+          <form action="" class="join__form">
+            <input
+              type="email"
+              placeholder="Enter email"
+              class="join__input"
+            />
+            <button type="submit" class="join__button button">
+              Subscribe
+            </button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- JOIN END -->
+
+
+
+      
+
 <%- include('../partials/footer-pages') %>
 
     <!-- SWIPER JS -->
     <script src="../javascripts/swiper-bundle.min.js"></script>
+    <!-- REVIEW JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="../javascripts/review.js"></script>
 
     <!-- MAIN JS -->
     <script src="../javascripts/home-books.js"></script>
+    
   </body>
 </html>
