Revert "Chat bot"

--- a/server/views/pages/faq-pages.ejs
+++ b/server/views/pages/faq-pages.ejs
@@ -83,6 +83,7 @@
 <%- include('../partials/footer-pages') %>
 
 <script src="../javascripts/searchBar.js" async defer></script>
+<!--<script src="../javascripts/contact.js" async defer></script>-->
 <script src="../javascripts/ripple.js" async defer></script>
 <script src="../javascripts/udemyday12.js" async defer></script>
 
