--- a/server/views/auth/complete.ejs
+++ b/server/views/auth/complete.ejs
@@ -36,8 +36,8 @@
     </div>
   </main>
   <%- include('../partials/footer-pages') %>
+  <%- include('../partials/scripts') %>
 
-  <script src="../javascripts/searchBar.js" async defer></script>
   <!--<script src="../javascripts/contact.js" async defer></script>-->
   <script src="../javascripts/ripple.js" async defer></script>
   </body>
