--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -50,14 +50,15 @@
 
 
 </div>
+<%- include('../partials/bot-pages') %>
 
 <%- include('../partials/footer-pages') %>
 
 <script src="../javascripts/udemyday8.js" defer></script>
 
 
+<%- include('../partials/scripts') %>
 
-<script src="../javascripts/searchBar.js" async defer></script>
 <!--<script src="../javascripts/contact.js" async defer></script>-->
 <script src="../javascripts/ripple.js" async defer></script>
 
