--- a/server/views/auth/registration.ejs
+++ b/server/views/auth/registration.ejs
@@ -53,5 +53,7 @@
 
 
 </div>
-
+<%- include('../partials/bot-pages') %>
   <%- include('../partials/footer-pages'); -%>
+
+  <%- include('../partials/scripts') %>
