--- a/server/views/pages/about-pages.ejs
+++ b/server/views/pages/about-pages.ejs
@@ -34,9 +34,8 @@
 <%- include('../partials/footer-pages') %>
 
 
+<%- include('../partials/scripts') %>
 
-<script src="../javascripts/searchBar.js" async defer></script>
-<script src="../javascripts/bot.js" async defer></script>
 <script src="../javascripts/udemyday5.js" defer></script>
 <script src="../javascripts/udemyday40.js" defer></script>
 
