--- a/server/views/pages/faq-pages.ejs
+++ b/server/views/pages/faq-pages.ejs
@@ -79,10 +79,11 @@
 </div>
 
 
+<%- include('../partials/bot-pages') %>
 
 <%- include('../partials/footer-pages') %>
+<%- include('../partials/scripts') %>
 
-<script src="../javascripts/searchBar.js" async defer></script>
 <script src="../javascripts/ripple.js" async defer></script>
 <script src="../javascripts/udemyday12.js" async defer></script>
 
