--- a/server/views/pages/favorites-pages.ejs
+++ b/server/views/pages/favorites-pages.ejs
@@ -67,9 +67,9 @@
 <%- include('../partials/bot-pages') %>
 <%- include('../partials/footer-pages') %>
 
-<script src="../javascripts/searchBar.js" async defer></script>
+<%- include('../partials/scripts') %>
+
 <script src="../javascripts/favorites.js"></script>
-<script src="../javascripts/bot.js" async defer></script>
 <script src="../javascripts/udemyday18.js" defer></script>
 
 </body>
