--- a/server/views/pages/main-pages.ejs
+++ b/server/views/pages/main-pages.ejs
@@ -346,9 +346,10 @@
 
 
 
-
+<%- include('../partials/bot-pages') %>
 <%- include('../partials/footer-pages') %>
 
+<%- include('../partials/scripts') %>
     <!-- SWIPER JS -->
     <script src="../javascripts/swiper-bundle.min.js"></script>
     <!-- REVIEW JS -->
@@ -358,8 +359,6 @@
     <!-- MAIN JS -->
     <script src="../javascripts/home-books.js"></script>
 
-    <script src="../javascripts/searchBar.js" async defer></script>
-    <script src="../javascripts/bot.js"></script>
 
 
   </body>
