--- a/server/views/pages/notFound-pages.ejs
+++ b/server/views/pages/notFound-pages.ejs
@@ -9,6 +9,8 @@
 </div>
 
 
+
+
 <%- include('../partials/footer-pages') %>
 
     <!-- SWIPER JS -->
@@ -16,7 +18,7 @@
 
     <!-- MAIN JS -->
     <script src="../javascripts/home-books.js"></script>
-    <script src="../javascripts/searchBar.js" async defer></script>
+    <%- include('../partials/scripts') %>
 
   </body>
 </html>
