--- a/server/views/auth/changepassword.ejs
+++ b/server/views/auth/changepassword.ejs
@@ -41,9 +41,12 @@
     </div>
     
   </main>
+  <%- include('../partials/bot-pages') %>
+
   <%- include('../partials/footer-pages') %>
 
-  <script src="../javascripts/searchBar.js" async defer></script>
+  <%- include('../partials/scripts') %>
+
   <!--<script src="../javascripts/contact.js" async defer></script>-->
   <script src="../javascripts/ripple.js" async defer></script>
   </body>
