--- a/server/views/auth/myaccount.ejs
+++ b/server/views/auth/myaccount.ejs
@@ -29,9 +29,12 @@
         </div>
     </div>
   </main>
+  <%- include('../partials/bot-pages') %>
+
   <%- include('../partials/footer-pages'); -%>
-  <script src="../javascripts/searchBar.js" async defer></script>
 <!--<script src="../javascripts/contact.js" async defer></script>-->
 <script src="../javascripts/ripple.js" async defer></script>
+<%- include('../partials/scripts') %>
+
 </body>
 </html>
