--- a/server/views/pages/myaccount.ejs
+++ b/server/views/pages/myaccount.ejs
@@ -49,8 +49,8 @@
 <%- include('../partials/bot-pages') %>
 <%- include('../partials/footer-pages'); -%>
 </body>
-<script src="../javascripts/searchBar.js" async defer></script>
 <!--<script src="../javascripts/contact.js" async defer></script>-->
 <script src="../javascripts/ripple.js" async defer></script>
-<script src="../javascripts/bot.js" async defer></script>
+<%- include('../partials/scripts') %>
+
 </html>
