--- a/server/views/pages/about-pages.ejs
+++ b/server/views/pages/about-pages.ejs
@@ -15,22 +15,22 @@
     <div class="content-effect-container">
     
     <div class="about-content">
-        <p>Welcome to your ultimate destination for discovering and sharing recipes. Our mission is to empower home cooks with a wide variety of easy-to-follow recipes, curated from all over the globe. Whether you're looking for a quick weekday dinner or a challenging weekend project, our collection of recipes is designed to inspire creativity in the kitchen.</p>
-        <p>Founded by a team of food enthusiasts, our website is driven by a passion for cooking and sharing meals. We believe in the power of food to bring people together and aim to create a community where users can share their culinary adventures and discoveries.</p>
+        <p>Welcome to your ultimate destination for discovering and sharing books. Our mission is to promote reading.</p>
         <p>Our website features:</p>
         <ul>
-            <li>A diverse collection of recipes from different cuisines</li>
-            <li>User-friendly search and filter options to easily find the perfect recipe</li>
-            <li>Opportunities for users to submit their own recipes and tips</li>
-            <li>A selection of our favorite videos that include cooking tips and how to eat healthy</li>
+            <li>A diverse collection of genres.</li>
+            <li>User-friendly search and filter options to easily find the perfect books</li>
+            <li>Opportunities for users to add favorites.</li>
+            <li>A selection of our favorite books.</li>
         </ul>
-        <p>Join us on our journey to make cooking more accessible and enjoyable for everyone. Explore new flavors, share your creations, and become part of our growing community of food lovers.</p>
+        <p>Join us on our journey to make reading more accessible and enjoyable for everyone. Explore new genres.</p>
         </div>
     </div>
 </div>
 </div>
 
 <%- include('../partials/footer-pages') %>
+<%- include('../partials/bot-pages') %>
 
 
 <%- include('../partials/scripts') %>
