--- a/server/views/pages/favorites-pages.ejs
+++ b/server/views/pages/favorites-pages.ejs
@@ -65,6 +65,7 @@
 </div>
 
 <%- include('../partials/footer-pages') %>
+<%- include('../partials/bot-pages') %>
 
 <%- include('../partials/scripts') %>
 
