--- a/server/views/pages/notFound-pages.ejs
+++ b/server/views/pages/notFound-pages.ejs
@@ -12,6 +12,8 @@
 
 
 <%- include('../partials/footer-pages') %>
+<%- include('../partials/bot-pages') %>
+
 
     <!-- SWIPER JS -->
     <script src="../javascripts/swiper-bundle.min.js"></script>
