--- a/server/views/pages/search-pages.ejs
+++ b/server/views/pages/search-pages.ejs
@@ -49,6 +49,7 @@
 </div>
 
 <%- include('../partials/footer-pages') %>
+<%- include('../partials/bot-pages') %>
 
 <script src="../javascripts/favoriteButtons.js" async defer></script>
 <%- include('../partials/scripts') %>
