--- a/server/views/partials/footer-pages.ejs
+++ b/server/views/partials/footer-pages.ejs
@@ -1,6 +1,6 @@
 <footer>
     <div class="footer-text">
-        <p>Powered By Edaman API</p>
+        <p>Powered By Google Books API</p>
         <hr>
         <p>Arnan Khan, Aviv Cohen, Ishrat Amin, Mohammed Zian Hassan, Eric Yang</p>
     </div>
