--- a/server/views/partials/header-pages.ejs
+++ b/server/views/partials/header-pages.ejs
@@ -6,6 +6,8 @@
     <title><%= title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../stylesheets/style.css">
+    <link rel="stylesheet" href="../stylesheets/bot.css">
+
     <!-- FAVICON -->
     <link
       rel="shortcut icon"
