--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -300,7 +300,7 @@ nav.active .leftNav .brand{
 }
 /* ------------------Other Features--------------------------- */
 hr {
-    width: 900px;
+    width: 100%;
     height: 3.5px; 
     background-color: #F3EFE0; 
     border: none; 
