--- a/server/views/auth/complete.ejs
+++ b/server/views/auth/complete.ejs
@@ -35,7 +35,10 @@
         </div>
     </div>
   </main>
+
   <%- include('../partials/footer-pages') %>
+  <%- include('../partials/bot-pages') %>
+
   <%- include('../partials/scripts') %>
 
   <!--<script src="../javascripts/contact.js" async defer></script>-->
