--- a/server/views/pages/myaccount.ejs
+++ b/server/views/pages/myaccount.ejs
@@ -48,6 +48,8 @@
 
 
 <%- include('../partials/footer-pages'); -%>
+<%- include('../partials/bot-pages') %>
+
 </body>
 <!--<script src="../javascripts/contact.js" async defer></script>-->
 <script src="../javascripts/ripple.js" async defer></script>
